fix(lifecycle): improve HireContext robustness — null guards, employeeNumber guard, comments